# dmfilesearch

./: CMakeLists.txt  README.md
include/: dmfilesearch.h  dmfilesearch_config.h  dmfilesearch_config.h.in  dmstrtk.hpp
src/libdmfilesearch/: libdmfilesearch.def  libdmfilesearch_impl.cpp  libdmfilesearch_impl.h
test/dmfilesearchtest/: dmfilesearchtest.cpp
tools/dmfilesearch/: main.cpp
tools/es/: main.cpp
